CSCMETAX-260: [ADD] Read-only Schemas API implementation
